--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -9,7 +9,7 @@
 }
 
 
-.movies .ovie a {
+.movies .movie a {
     display:grid;
     grid-template-columns: minmax(150px, 1fr) 2fr;
     grid-gap: 20px;
